--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "framer-motion": "^2.6.6",
     "moment": "^2.27.0",
     "react": "^16.13.1",
+    "react-dnd": "^5.0.0",
+    "react-dnd-html5-backend": "^3.0.2",
     "react-dom": "^16.13.1",
     "react-marked-markdown": "^1.4.6",
     "react-moment": "^0.9.7",
@@ -17,6 +19,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-spinners": "^0.9.0",
+    "react-tag-input": "^6.4.3",
     "react-toastify": "^6.0.8",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
