--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "browser-image-compression": "^1.0.12",
     "firebase": "^7.19.1",
     "framer-motion": "^2.6.6",
+    "imagenation": "^3.1.4",
     "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-dnd": "^5.0.0",
