--- a/client/package.json
+++ b/client/package.json
@@ -7,15 +7,14 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "browser-image-compression": "^1.0.12",
+    "compress.js": "^1.1.2",
     "firebase": "^7.19.1",
     "framer-motion": "^2.6.6",
-    "imagenation": "^3.1.4",
     "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-dnd": "^5.0.0",
     "react-dnd-html5-backend": "^3.0.2",
     "react-dom": "^16.13.1",
-    "react-image-file-resizer": "^0.3.8",
     "react-marked-markdown": "^1.4.6",
     "react-moment": "^0.9.7",
     "react-redux": "^7.2.1",
