--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "firebase": "^7.19.1",
     "framer-motion": "^2.6.6",
     "moment": "^2.27.0",
+    "query-string": "^6.13.2",
     "react": "^16.13.1",
     "react-dnd": "^5.0.0",
     "react-dnd-html5-backend": "^3.0.2",
