--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/DucDao0906/Demo_App#readme",
   "dependencies": {
+    "@elastic/elasticsearch": "^7.9.1",
     "axios": "^0.20.0",
     "bcryptjs": "^2.4.3",
     "client": "file:client",
