--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,6 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "browser-image-compression": "^1.0.12",
-    "compress.js": "^1.1.2",
     "compressorjs": "^1.0.6",
     "firebase": "^7.19.1",
     "framer-motion": "^2.6.6",
@@ -29,8 +28,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
-    "shortid": "^2.2.15",
-    "styled-components": "^5.1.1"
+    "shortid": "^2.2.15"
   },
   "scripts": {
     "start": "react-scripts start",
